--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "url": "git://github.com/jspm/jspm-loader"
   },
   "author": "Guy Bedford",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "es6-module-loader": "~0.2.4"
+  }
 }
