--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Guy Bedford",
   "license": "MIT",
   "dependencies": {
+    "bower": "1.2.8",
     "es6-module-loader": "~0.5.4"
+  },
+  "scripts": {
+    "install": "node node_modules/bower/bin/bower install"
   }
 }
