--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,10 @@
   },
   "devDependencies": {
     "qunit": "~1.12.0"
-  }
+  },
+  "ignore": [
+    "test",
+    "Makefile",
+    "package.json"
+  ]
 }
