make minified build the default

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "systemjs",
   "version": "0.9.0",
   "description": "System loader extension for flexible AMD & CommonJS support",
-  "main": "dist/system.js",
+  "main": "dist/system.src.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/systemjs/systemjs"
