--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.10.1",
   "main": "dist/system.js",
   "dependencies": {
-    "es6-module-loader": "~0.10.0"
+    "es6-module-loader": "~0.10.0",
+    "traceur-runtime": "~0.0.79"
   },
   "devDependencies": {
     "qunit": "~1.12.0"
