--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.12.1",
+  "version": "0.12.0",
   "description": "System loader extension for flexible AMD & CommonJS support",
   "main": "dist/system.src.js",
   "repository": {
@@ -10,10 +10,10 @@
   "author": "Guy Bedford",
   "license": "MIT",
   "dependencies": {
-    "es6-module-loader": "~0.12.0"
+    "es6-module-loader": "~0.13.0"
   },
   "devDependencies": {
-    "6to5": "^3.0.0",
+    "6to5-core": "~3.3.2",
     "qunit": "^0.6.2",
     "uglify-js": "~2.4.13"
   },
