runtime test and fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "6to5-core": "~3.3.2",
     "qunit": "^0.6.2",
-    "uglify-js": "~2.4.13"
+    "uglify-js": "~2.4.13",
+    "traceur": "0.0.82"
   },
   "scripts": {
     "test": "npm run test:6to5 && npm run test:traceur",
