--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "traceur": "0.0.82"
   },
   "scripts": {
-    "test": "npm run test:6to5 && npm run test:traceur",
+    "test": "npm run test:babel && npm run test:traceur",
     "test:babel": "qunit -c s:./dist/system.js -t ./test/test-babel.js",
     "test:traceur": "qunit -c s:./dist/system.js -t ./test/test.js"
   }
