--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-core": "^5.0.10",
     "qunit": "^0.6.2",
     "uglify-js": "~2.4.13",
-    "traceur": "0.0.88"
+    "traceur": "0.0.88",
+    "typescript": "mhegazy/typescript#v1.5-beta2"
   },
   "scripts": {
     "test": "npm run test:babel && npm run test:traceur",
