--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "babel-core": "^5.0.10",
     "qunit": "^0.6.2",
-    "traceur": "0.0.87",
+    "traceur": "0.0.88",
+    "typescript": "mhegazy/typescript#v1.5-beta2",
     "uglify-js": "~2.4.13"
   },
   "scripts": {
