separate browser tests

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "uglify-js": "~2.4.13"
   },
   "scripts": {
-    "test": "npm run test:babel && npm run test:traceur && npm run test:typescript && make test",
+    "test:browser": "make test",
+    "test": "npm run test:babel && npm run test:traceur && npm run test:typescript",
     "test:babel": "qunit -c s:./index.js -t ./test/test-babel.js",
     "test:traceur": "qunit -c s:./index.js -t ./test/test-traceur.js",
     "test:typescript": "qunit -c s:./index.js -t ./test/test-typescript.js"
