--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-core": "^5.6.5",
     "qunit": "^0.6.2",
     "traceur": "0.0.90",
-    "typescript": "mhegazy/typescript#v1.5-beta2",
+    "typescript": "1.5.3",
     "uglify-js": "~2.4.23"
   },
   "scripts": {
