[bower] Don't distribute dev files
Add not distributable files to bower ignore.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,16 @@
 {
   "name": "systemjs",
   "main": "./dist/system.js",
+  "ignore": [
+    ".agignore",
+    ".gitignore"
+    ".travis.yml",
+    "index.js",
+    "lib/"
+    "package.json",
+    "Makefile",
+    "test"
+  ],
   "devDependencies": {
     "qunit": "~1.12.0"
   }
