--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.18.4",
+  "version": "0.18.5",
   "description": "System loader extension for flexible AMD & CommonJS support",
   "repository": {
     "type": "git",
@@ -9,13 +9,13 @@
   "author": "Guy Bedford",
   "license": "MIT",
   "dependencies": {
-    "es6-module-loader": "git://github.com/ModuleLoader/es6-module-loader#master",
+    "es6-module-loader": "^0.17.4",
     "when": "^3.7.2"
   },
   "devDependencies": {
-    "babel-core": "^5.6.5",
+    "babel-core": "^5.8.20",
     "qunit": "^0.6.2",
-    "traceur": "0.0.90",
+    "traceur": "0.0.91",
     "typescript": "next",
     "uglify-js": "~2.4.23"
   },
