--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.19.0-dev",
+  "version": "0.18.17",
   "description": "System loader extension for flexible AMD & CommonJS support",
   "repository": {
     "type": "git",
