--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.19.0-dev",
+  "version": "0.19.0",
   "description": "System loader extension for flexible AMD & CommonJS support",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "babel-core": "^5.8.22",
     "qunit": "^0.6.2",
     "traceur": "0.0.91",
-    "typescript": "next",
+    "typescript": "^1.6.2",
     "uglify-js": "~2.4.23"
   },
   "scripts": {
