--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.19.6",
+  "version": "0.19.7-dev",
   "description": "Universal dynamic module loader",
   "repository": {
     "type": "git",
