Only include actively used files in npm package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "Guy Bedford",
   "license": "MIT",
+  "files": [
+    "index.js",
+    "dist"
+  ],
   "dependencies": {
     "when": "^3.7.5"
   },
