--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "0.20.0-alpha",
+  "version": "0.20.0-alpha.1",
   "description": "Universal dynamic module loader",
   "repository": {
     "type": "git",
