--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "dist/system.src.js",
   "devDependencies": {
     "bluebird": "^3.4.6",
-    "es-module-loader": "^1.3.5",
+    "es-module-loader": "ModuleLoader/es-module-loader#next",
     "mocha": "^3.1.2",
     "plugin-typescript": "^5.2.7",
     "rollup": "^0.34.13",
