separate production loader development

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "es-module-loader": "ModuleLoader/es-module-loader#next",
     "mocha": "^3.1.2",
     "plugin-typescript": "^5.2.7",
-    "rollup": "^0.34.13",
+    "rollup": "^0.36.4",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "systemjs-plugin-babel": "0.0.17",
@@ -26,9 +26,15 @@
     "typescript": "^2.0.6"
   },
   "scripts": {
-    "build": "rollup -c",
-    "min": "uglifyjs dist/system.src.js -cm --in-source-map dist/system.src.js.map --source-map dist/system.js.map --screw-ie8 --comments '/SystemJS v/' > dist/system.js",
-    "footprint": "uglifyjs dist/system.src.js -cm --screw-ie8 | gzip -9f | wc -c",
+    "build": "npm run build:dev && npm run build:production",
+    "build:dev": "rollup -c",
+    "build:production": "rollup -c --environment production",
+    "min": "npm run min:dev && npm run min:production",
+    "min:dev": "uglifyjs dist/system.src.js -cm --in-source-map dist/system.src.js.map --source-map dist/system.js.map --screw-ie8 --comments '/SystemJS v/' > dist/system.js",
+    "min:production": "uglifyjs dist/system-production.src.js -cm --in-source-map dist/system-production.src.js.map --source-map dist/system-production.js.map --screw-ie8 --comments '/SystemJS v/' > dist/system-production.js",
+    "footprint": "npm run footprint:dev && npm run footprint:production",
+    "footprint:dev": "uglifyjs dist/system.src.js -cm --screw-ie8 | gzip -9f | wc -c",
+    "footprint:production": "uglifyjs dist/system-production.src.js -cm --screw-ie8 | gzip -9f | wc -c",
     "test": "npm run test:babel && npm run test:traceur && npm run test:typescript",
     "test:traceur": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:babel": "mocha test/test-babel.js -u tdd --reporter dot",
