--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "footprint": "npm run footprint:dev && npm run footprint:production",
     "footprint:dev": "uglifyjs dist/system.src.js -cm --screw-ie8 | gzip -9f | wc -c",
     "footprint:production": "uglifyjs dist/system-production.src.js -cm --screw-ie8 | gzip -9f | wc -c",
-    "test": "npm run test:babel && npm run test:traceur && npm run test:typescript",
+    "test": "npm run test:production && npm run test:babel && npm run test:traceur && npm run test:typescript",
+    "test:production": "mocha test/test-production.js -u tdd --reporter dot",
     "test:traceur": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:babel": "mocha test/test-babel.js -u tdd --reporter dot",
     "test:typescript": "mocha test/test-typescript.js -u tdd --reporter dot",
     "irhydra": "node --trace-hydrogen --trace-phase=Z --trace-deopt --code-comments --hydrogen-track-positions --redirect-code-traces --redirect-code-traces-to=code.asm --print-opt-code --trace_hydrogen_file=hydrogen.cfg irhydra/load.js"
+  },
+  "dependencies": {
+    "source-map-support": "^0.4.6",
+    "systemjs-plugin-babel": "0.0.17"
   }
 }
