--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "index-production.js",
     "index-dev.js"
   ],
-  "main": "index-production.js",
+  "main": "dist/system.src.js",
   "devDependencies": {
     "bluebird": "^3.4.6",
     "es-module-loader": "ModuleLoader/es-module-loader#next",
