--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "es-module-loader": "ModuleLoader/es-module-loader#next",
     "mocha": "^3.1.2",
     "plugin-typescript": "^5.2.7",
-    "rollup": "^0.36.4",
+    "rollup": "^0.41.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "systemjs-plugin-babel": "0.0.17",
@@ -33,8 +33,8 @@
     "build:dev": "rollup -c",
     "build:production": "rollup -c --environment production",
     "min": "npm run min:dev && npm run min:production",
-    "min:dev": "uglifyjs dist/system.src.js -cm --in-source-map dist/system.src.js.map --source-map dist/system.js.map --screw-ie8 --comments '/SystemJS v/' > dist/system.js",
-    "min:production": "uglifyjs dist/system-production.src.js -cm --in-source-map dist/system-production.src.js.map --source-map dist/system-production.js.map --screw-ie8 --comments '/SystemJS v/' > dist/system-production.js",
+    "min:dev": "cd dist && uglifyjs system.src.js -cm --in-source-map system.src.js.map --source-map system.js.map --screw-ie8 --comments '/SystemJS v/' > system.js",
+    "min:production": "cd dist && uglifyjs system-production.src.js -cm --in-source-map system-production.src.js.map --source-map system-production.js.map --screw-ie8 --comments '/SystemJS v/' > system-production.js",
     "footprint": "npm run footprint:dev && npm run footprint:production",
     "footprint:dev": "uglifyjs dist/system.src.js -cm --screw-ie8 | gzip -9f | wc -c",
     "footprint:production": "uglifyjs dist/system-production.src.js -cm --screw-ie8 | gzip -9f | wc -c",
