--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-modules-systemjs": "^6.19.0",
     "bluebird": "^3.4.6",
-    "es-module-loader": "ModuleLoader/es-module-loader#next",
+    "es-module-loader": "^2.0.0",
     "mocha": "^3.1.2",
     "plugin-typescript": "^5.2.7",
     "rollup": "^0.41.1",
