--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build:dev": "rollup -c",
     "build:production": "rollup -c --environment production",
     "min": "npm run min:dev && npm run min:production",
-    "min:dev": "cd dist && uglifyjs system.src.js -cm --source-map content=system.src.js.map --comments \"SystemJS v\" -o system.js",
-    "min:production": "cd dist && uglifyjs system-production.src.js -cm --source-map content=system-production.src.js.map --comments \"SystemJS v\" -o system-production.js",
+    "min:dev": "cd dist && uglifyjs system.src.js -cm --source-map content=system.src.js.map --comments \"/SystemJS v/\" -o system.js",
+    "min:production": "cd dist && uglifyjs system-production.src.js -cm --source-map content=system-production.src.js.map --comments \"/SystemJS v/\" -o system-production.js",
     "footprint": "npm run footprint:dev && npm run footprint:production",
     "footprint:dev": "uglifyjs dist/system.src.js -cm | gzip -9f | wc -c",
     "footprint:production": "uglifyjs dist/system-production.src.js -cm | gzip -9f | wc -c",
