--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "es-module-loader": "^2.2.8",
     "mocha": "^3.1.2",
     "rimraf": "^2.6.1",
-    "rollup": "^0.41.1",
+    "rollup": "~0.57.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "systemjs-plugin-babel": "0.0.17",
