Added call to donate after npm install (optional)

--- a/package.json
+++ b/package.json
@@ -43,6 +43,14 @@
     "test:babel": "mocha test/test-babel.js -u tdd --reporter dot",
     "test:production": "mocha test/test-production.js -u tdd --reporter dot",
     "irhydra": "node --trace-hydrogen --trace-phase=Z --trace-deopt --code-comments --hydrogen-track-positions --redirect-code-traces --redirect-code-traces-to=code.asm --print-opt-code --trace_hydrogen_file=hydrogen.cfg irhydra/load.js",
-    "prepublish": "rimraf dist && npm run build && npm run min"
+    "prepublish": "rimraf dist && npm run build && npm run min",
+    "postinstall": "opencollective-postinstall"
+  },
+  "dependencies": {
+    "opencollective": "^1.0.3"
+  },
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/systemjs"
   }
 }
