--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
-    "test:unit": "mocha -b -r esm test/unit",
+    "test:core": "mocha -b -r esm test/core",
     "test:rebuild": "babel test/fixtures/es-modules --plugins=@babel/plugin-syntax-import-meta,@babel/plugin-transform-modules-systemjs --out-dir test/fixtures/register-modules",
     "test": "npm run test:systemjs && npm run test:sjs",
     "test:systemjs": "mocha test/test-traceur.js -u tdd --reporter dot",
