--- a/package.json
+++ b/package.json
@@ -29,16 +29,15 @@
     "build:systemjs": "rollup -c",
     "build:sjs": "rollup -c --environment sjs",
     "build:ie11": "cat node_modules/bluebird/js/browser/bluebird.core.js node_modules/whatwg-fetch/fetch.js | terser -c passes=2 m -o dist/ie11-polyfills.js",
-    "build:extras": "cp src/extras/amd.js dist/extras/amd.js && cd dist/extras && terser amd.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o amd.min.js",
+    "build:extras": "cp src/extras/* dist/extras/ && env ./minify-extras.sh",
     "min": "npm run min:systemjs && npm run min:sjs",
     "min:systemjs": "cd dist && terser system.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system.min.js",
     "min:sjs": "cd dist && terser s.js -c passes=2 -m --source-map --comments \"/SJS \\d/\" -o s.min.js",
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
-    "test:core": "mocha -b -r esm",
+    "test": "mocha -b -r esm",
     "test:rebuild": "babel test/fixtures/es-modules --plugins=@babel/plugin-syntax-import-meta,@babel/plugin-transform-modules-systemjs --out-dir test/fixtures/register-modules",
-    "test": "npm run test:systemjs && npm run test:sjs",
     "test:systemjs": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:sjs": "mocha test/test-production.js -u tdd --reporter dot",
     "prepublish": "rimraf dist && npm run build && npm run min"
