--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "test:rebuild": "babel test/fixtures/es-modules --plugins=@babel/plugin-syntax-import-meta,@babel/plugin-transform-modules-systemjs --out-dir test/fixtures/register-modules",
     "test:systemjs": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:sjs": "mocha test/test-production.js -u tdd --reporter dot",
-    "prepublish": "rimraf dist && npm run build && npm run min"
+    "prepublish": "npm run build"
   }
 }
