--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "systemjs",
-  "version": "2.0.0-dev",
+  "version": "2.0.0-alpha.1",
   "description": "Dynamic ES module loader",
   "repository": {
     "type": "git",
