Adding Node.js support (https://github.com/systemjs/systemjs/issues/1873). While not complete, this supports the "system" format, "json" files, and builtin modules. It can resolve bare specifiers using import maps and the node_modules search algorithm. So far, it passes all the relevant tests that exist for the browser-specific version. Tests that are specific to Node.js use cases have not been added here yet.

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@babel/plugin-transform-modules-systemjs": "^7.0.0-rc.1",
     "bluebird": "^3.5.1",
     "esm": "^3.0.77",
+    "is-builtin-module": "^3.0.0",
     "mocha": "^5.2.0",
     "rollup": "^0.64.1",
     "rollup-plugin-replace": "^2.0.0",
+    "strip-shebang": "^1.0.2",
     "terser": "^3.8.1",
     "whatwg-fetch": "^2.0.4"
   },
@@ -32,6 +34,7 @@
     "build:extras": "bash minify-extras.sh",
     "min": "npm run min:systemjs && npm run min:sjs",
     "min:systemjs": "cd dist && terser system.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system.min.js",
+    "min:systemjs-node": "cd dist && terser system-node.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system-node.min.js",
     "min:sjs": "cd dist && terser s.js -c passes=2 -m --source-map -o s.min.js",
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
