--- a/package.json
+++ b/package.json
@@ -13,26 +13,39 @@
     "dist"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-syntax-import-meta": "^7.0.0-rc.1",
-    "@babel/plugin-transform-modules-systemjs": "^7.0.0-rc.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-modules-systemjs": "^7.2.0",
     "bluebird": "^3.5.1",
     "esm": "^3.0.77",
+    "file-fetch": "^1.1.1",
     "file-url": "^2.0.2",
+    "http-server": "^0.11.1",
+    "isomorphic-fetch": "^2.2.1",
     "is-builtin-module": "^3.0.0",
     "mocha": "^5.2.0",
-    "rollup": "^0.64.1",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-ignore": "^1.0.5",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.0.0",
+    "source-map-support": "^0.5.10",
     "strip-shebang": "^1.0.2",
     "terser": "^3.8.1",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "build": "npm run build:systemjs && npm run build:sjs && npm run min && npm run build:extras",
     "build:systemjs": "rollup -c",
     "build:sjs": "rollup -c --environment sjs",
     "build:extras": "bash minify-extras.sh",
+    "clean": "rimraf dist/**/*.js dist/**/*.map",
     "min": "npm run min:systemjs && npm run min:sjs",
     "min:systemjs": "cd dist && terser system.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system.min.js",
     "min:systemjs-node": "cd dist && terser system-node.js -c passes=2 -m --source-map --comments \"/SystemJS \\d/\" -o system-node.min.js",
@@ -40,10 +53,11 @@
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
+    "start": "http-server",
     "test": "mocha -b -r esm",
     "test:rebuild": "babel test/fixtures/es-modules --plugins=@babel/plugin-syntax-import-meta,@babel/plugin-transform-modules-systemjs --out-dir test/fixtures/register-modules",
     "test:systemjs": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:sjs": "mocha test/test-production.js -u tdd --reporter dot",
-    "prepublish": "npm run build"
+    "prepublish": "npm run clean && npm run build"
   }
 }
