--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
     "start": "http-server",
-    "test": "mocha -b -r esm",
+    "test": "npm run test:core && npm run test:node",
+    "test:core": "mocha -r esm test/*.js",
+    "test:node": "mocha -r esm test/node/**/*.js",
     "test:rebuild": "babel test/fixtures/es-modules --plugins=@babel/plugin-syntax-import-meta,@babel/plugin-transform-modules-systemjs --out-dir test/fixtures/register-modules",
     "test:systemjs": "mocha test/test-traceur.js -u tdd --reporter dot",
     "test:sjs": "mocha test/test-production.js -u tdd --reporter dot",
