--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
-    "test": "mocha -b -r esm && npm run test-browser",
+    "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js && npm run test-browser",
     "test-browser": "node test/server.js",
     "prepublish": "npm run build"
   }
