--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "dist"
   ],
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
     "bluebird": "^3.5.1",
     "construct-style-sheets-polyfill": "^2.1.0",
     "esm": "^3.2.25",
     "mocha": "^5.2.0",
     "opn": "^6.0.0",
     "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-replace": "^2.0.0",
     "terser": "^3.8.1",
     "whatwg-fetch": "^2.0.4"
