--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
     "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js && npm run test-browser",
     "test-browser": "node test/server.js",
+    "test-browser-watch": "WATCH_MODE=true node test/server.js",
     "prepublish": "npm run build"
   },
   "collective": {
