--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
     "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
     "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js && npm run test-browser",
-    "test-browser": "node test/server.js",
+    "test-browser": "node test/server.cjs",
+    "test-browser-watch": "WATCH_MODE=true node test/server.cjs",
     "prepublish": "npm run build"
   },
   "collective": {
