--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "build": "rimraf dist && rollup -c",
     "footprint": "npm run footprint:systemjs && npm run footprint:sjs",
-    "footprint:systemjs": "terser dist/system.js -c passes=2 -m | gzip -9f | wc -c",
-    "footprint:sjs": "terser dist/s.js -c passes=2 -m | gzip -9f | wc -c",
+    "footprint:systemjs": "cat dist/system.min.js | gzip -9f | wc -c",
+    "footprint:sjs": "cat dist/s.min.js | gzip -9f | wc -c",
     "test": "mocha -b -r esm test/import-map.js test/system-core.js test/url-resolution.js && npm run test-browser",
     "test-browser": "node test/server.cjs",
     "test-browser-watch": "WATCH_MODE=true node test/server.cjs",
