WIP: NodeJS support. See #1873.

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "collective": {
     "type": "opencollective",
     "url": "https://opencollective.com/systemjs"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
