--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "systemjs",
   "version": "6.2.6",
+  "main": "dist/system-node.js",
   "description": "Dynamic ES module loader",
   "repository": {
     "type": "git",
